static/psi4manual/1.3.2/_sources/autodir_psivariables/module__occ.rst.txt
.. _`apdx:occ_psivar`:


OCC
===

Performs orbital-optimized MPn and CC computations and conventional MPn computations.

.. hlist::
   :columns: 1

   * :psivar:`CURRENT CORRELATION ENERGY <CURRENTCORRELATIONENERGY>`

   * :psivar:`CURRENT ENERGY <CURRENTENERGY>`

   * :psivar:`CURRENT REFERENCE ENERGY <CURRENTREFERENCEENERGY>`

   * :psivar:`LCCD CORRELATION ENERGY <LCCDCORRELATIONENERGY>`

   * :psivar:`LCCD TOTAL ENERGY <LCCDTOTALENERGY>`

   * :psivar:`MP2 CORRELATION ENERGY <MP2CORRELATIONENERGY>`

   * :psivar:`MP2 OPPOSITE-SPIN CORRELATION ENERGY <MP2OPPOSITE-SPINCORRELATIONENERGY>`

   * :psivar:`MP2 SAME-SPIN CORRELATION ENERGY <MP2SAME-SPINCORRELATIONENERGY>`

   * :psivar:`MP2 TOTAL ENERGY <MP2TOTALENERGY>`

   * :psivar:`MP2.5 CORRELATION ENERGY <MP2.5CORRELATIONENERGY>`

   * :psivar:`MP2.5 TOTAL ENERGY <MP2.5TOTALENERGY>`

   * :psivar:`MP3 CORRELATION ENERGY <MP3CORRELATIONENERGY>`

   * :psivar:`MP3 TOTAL ENERGY <MP3TOTALENERGY>`

   * :psivar:`OLCCD CORRELATION ENERGY <OLCCDCORRELATIONENERGY>`

   * :psivar:`OLCCD TOTAL ENERGY <OLCCDTOTALENERGY>`

   * :psivar:`OMP2 CORRELATION ENERGY <OMP2CORRELATIONENERGY>`

   * :psivar:`OMP2 TOTAL ENERGY <OMP2TOTALENERGY>`

   * :psivar:`OMP2.5 CORRELATION ENERGY <OMP2.5CORRELATIONENERGY>`

   * :psivar:`OMP2.5 TOTAL ENERGY <OMP2.5TOTALENERGY>`

   * :psivar:`OMP3 CORRELATION ENERGY <OMP3CORRELATIONENERGY>`

   * :psivar:`OMP3 TOTAL ENERGY <OMP3TOTALENERGY>`

   * :psivar:`SCS-MP2 CORRELATION ENERGY <SCS-MP2CORRELATIONENERGY>`

   * :psivar:`SCS-MP2 TOTAL ENERGY <SCS-MP2TOTALENERGY>`

   * :psivar:`SCS-MP2-VDW CORRELATION ENERGY <SCS-MP2-VDWCORRELATIONENERGY>`

   * :psivar:`SCS-MP2-VDW TOTAL ENERGY <SCS-MP2-VDWTOTALENERGY>`

   * :psivar:`SCS-MP3 CORRELATION ENERGY <SCS-MP3CORRELATIONENERGY>`

   * :psivar:`SCS-MP3 TOTAL ENERGY <SCS-MP3TOTALENERGY>`

   * :psivar:`SCS-MP3-VDW CORRELATION ENERGY <SCS-MP3-VDWCORRELATIONENERGY>`

   * :psivar:`SCS-MP3-VDW TOTAL ENERGY <SCS-MP3-VDWTOTALENERGY>`

   * :psivar:`SCS-OLCCD CORRELATION ENERGY <SCS-OLCCDCORRELATIONENERGY>`

   * :psivar:`SCS-OLCCD TOTAL ENERGY <SCS-OLCCDTOTALENERGY>`

   * :psivar:`SCS-OMP2 CORRELATION ENERGY <SCS-OMP2CORRELATIONENERGY>`

   * :psivar:`SCS-OMP2 TOTAL ENERGY <SCS-OMP2TOTALENERGY>`

   * :psivar:`SCS-OMP2-VDW CORRELATION ENERGY <SCS-OMP2-VDWCORRELATIONENERGY>`

   * :psivar:`SCS-OMP2-VDW TOTAL ENERGY <SCS-OMP2-VDWTOTALENERGY>`

   * :psivar:`SCS-OMP3 CORRELATION ENERGY <SCS-OMP3CORRELATIONENERGY>`

   * :psivar:`SCS-OMP3 TOTAL ENERGY <SCS-OMP3TOTALENERGY>`

   * :psivar:`SCS-OMP3-VDW CORRELATION ENERGY <SCS-OMP3-VDWCORRELATIONENERGY>`

   * :psivar:`SCS-OMP3-VDW TOTAL ENERGY <SCS-OMP3-VDWTOTALENERGY>`

   * :psivar:`SCSN-MP2 CORRELATION ENERGY <SCSN-MP2CORRELATIONENERGY>`

   * :psivar:`SCSN-MP2 TOTAL ENERGY <SCSN-MP2TOTALENERGY>`

   * :psivar:`SCSN-MP3 CORRELATION ENERGY <SCSN-MP3CORRELATIONENERGY>`

   * :psivar:`SCSN-MP3 TOTAL ENERGY <SCSN-MP3TOTALENERGY>`

   * :psivar:`SCSN-OMP2 CORRELATION ENERGY <SCSN-OMP2CORRELATIONENERGY>`

   * :psivar:`SCSN-OMP2 TOTAL ENERGY <SCSN-OMP2TOTALENERGY>`

   * :psivar:`SCSN-OMP3 CORRELATION ENERGY <SCSN-OMP3CORRELATIONENERGY>`

   * :psivar:`SCSN-OMP3 TOTAL ENERGY <SCSN-OMP3TOTALENERGY>`

   * :psivar:`SOS-MP2 CORRELATION ENERGY <SOS-MP2CORRELATIONENERGY>`

   * :psivar:`SOS-MP2 TOTAL ENERGY <SOS-MP2TOTALENERGY>`

   * :psivar:`SOS-MP3 CORRELATION ENERGY <SOS-MP3CORRELATIONENERGY>`

   * :psivar:`SOS-MP3 TOTAL ENERGY <SOS-MP3TOTALENERGY>`

   * :psivar:`SOS-OLCCD CORRELATION ENERGY <SOS-OLCCDCORRELATIONENERGY>`

   * :psivar:`SOS-OLCCD TOTAL ENERGY <SOS-OLCCDTOTALENERGY>`

   * :psivar:`SOS-OMP2 CORRELATION ENERGY <SOS-OMP2CORRELATIONENERGY>`

   * :psivar:`SOS-OMP2 TOTAL ENERGY <SOS-OMP2TOTALENERGY>`

   * :psivar:`SOS-OMP3 CORRELATION ENERGY <SOS-OMP3CORRELATIONENERGY>`

   * :psivar:`SOS-OMP3 TOTAL ENERGY <SOS-OMP3TOTALENERGY>`

   * :psivar:`SOS-PI-MP2 CORRELATION ENERGY <SOS-PI-MP2CORRELATIONENERGY>`

   * :psivar:`SOS-PI-MP2 TOTAL ENERGY <SOS-PI-MP2TOTALENERGY>`

   * :psivar:`SOS-PI-MP3 CORRELATION ENERGY <SOS-PI-MP3CORRELATIONENERGY>`

   * :psivar:`SOS-PI-MP3 TOTAL ENERGY <SOS-PI-MP3TOTALENERGY>`

   * :psivar:`SOS-PI-OMP2 CORRELATION ENERGY <SOS-PI-OMP2CORRELATIONENERGY>`

   * :psivar:`SOS-PI-OMP2 TOTAL ENERGY <SOS-PI-OMP2TOTALENERGY>`

   * :psivar:`SOS-PI-OMP3 CORRELATION ENERGY <SOS-PI-OMP3CORRELATIONENERGY>`

   * :psivar:`SOS-PI-OMP3 TOTAL ENERGY <SOS-PI-OMP3TOTALENERGY>`


