static/psi4manual/1.5.0/_sources/autodir_psivariables/module__occ.rst.txt
.. _`apdx:occ_psivar`:


OCC
===

Performs orbital-optimized MPn and CC computations and conventional MPn computations.

.. hlist::
   :columns: 1

   * :psivar:`CURRENT CORRELATION ENERGY`

   * :psivar:`CURRENT ENERGY`

   * :psivar:`CURRENT REFERENCE ENERGY`

   * :psivar:`CUSTOM SCS-LCCD CORRELATION ENERGY`

   * :psivar:`CUSTOM SCS-LCCD TOTAL ENERGY`

   * :psivar:`CUSTOM SCS-MP2 CORRELATION ENERGY`

   * :psivar:`CUSTOM SCS-MP2 TOTAL ENERGY`

   * :psivar:`CUSTOM SCS-MP2.5 CORRELATION ENERGY`

   * :psivar:`CUSTOM SCS-MP2.5 TOTAL ENERGY`

   * :psivar:`CUSTOM SCS-MP3 CORRELATION ENERGY`

   * :psivar:`CUSTOM SCS-MP3 TOTAL ENERGY`

   * :psivar:`CUSTOM SCS-OLCCD CORRELATION ENERGY`

   * :psivar:`CUSTOM SCS-OLCCD TOTAL ENERGY`

   * :psivar:`CUSTOM SCS-OMP2 CORRELATION ENERGY`

   * :psivar:`CUSTOM SCS-OMP2 TOTAL ENERGY`

   * :psivar:`CUSTOM SCS-OMP3 CORRELATION ENERGY`

   * :psivar:`CUSTOM SCS-OMP3 TOTAL ENERGY`

   * :psivar:`LCCD CORRELATION ENERGY`

   * :psivar:`LCCD DOUBLES ENERGY`

   * :psivar:`LCCD OPPOSITE-SPIN CORRELATION ENERGY`

   * :psivar:`LCCD SAME-SPIN CORRELATION ENERGY`

   * :psivar:`LCCD SINGLES ENERGY`

   * :psivar:`LCCD TOTAL ENERGY`

   * :psivar:`MP2 CORRELATION ENERGY`

   * :psivar:`MP2 DOUBLES ENERGY`

   * :psivar:`MP2 OPPOSITE-SPIN CORRELATION ENERGY`

   * :psivar:`MP2 SAME-SPIN CORRELATION ENERGY`

   * :psivar:`MP2 SINGLES ENERGY`

   * :psivar:`MP2 TOTAL ENERGY`

   * :psivar:`MP2.5 CORRELATION ENERGY`

   * :psivar:`MP2.5 DOUBLES ENERGY`

   * :psivar:`MP2.5 OPPOSITE-SPIN CORRELATION ENERGY`

   * :psivar:`MP2.5 SAME-SPIN CORRELATION ENERGY`

   * :psivar:`MP2.5 SINGLES ENERGY`

   * :psivar:`MP2.5 TOTAL ENERGY`

   * :psivar:`MP3 CORRELATION ENERGY`

   * :psivar:`MP3 DOUBLES ENERGY`

   * :psivar:`MP3 OPPOSITE-SPIN CORRELATION ENERGY`

   * :psivar:`MP3 SAME-SPIN CORRELATION ENERGY`

   * :psivar:`MP3 SINGLES ENERGY`

   * :psivar:`MP3 TOTAL ENERGY`

   * :psivar:`OLCCD CORRELATION ENERGY`

   * :psivar:`OLCCD OPPOSITE-SPIN CORRELATION ENERGY`

   * :psivar:`OLCCD REFERENCE CORRECTION ENERGY`

   * :psivar:`OLCCD SAME-SPIN CORRELATION ENERGY`

   * :psivar:`OLCCD TOTAL ENERGY`

   * :psivar:`OMP2 CORRELATION ENERGY`

   * :psivar:`OMP2 TOTAL ENERGY`

   * :psivar:`OMP2.5 CORRELATION ENERGY`

   * :psivar:`OMP2.5 TOTAL ENERGY`

   * :psivar:`OMP3 CORRELATION ENERGY`

   * :psivar:`OMP3 TOTAL ENERGY`

   * :psivar:`SCS(N)-MP2 CORRELATION ENERGY`

   * :psivar:`SCS(N)-MP2 TOTAL ENERGY`

   * :psivar:`SCS-MP2 CORRELATION ENERGY`

   * :psivar:`SCS-MP2 TOTAL ENERGY`

   * :psivar:`SCS-MP2-VDW CORRELATION ENERGY`

   * :psivar:`SCS-MP2-VDW TOTAL ENERGY`

   * :psivar:`SCS-MP3 CORRELATION ENERGY`

   * :psivar:`SCS-MP3 TOTAL ENERGY`

   * :psivar:`SCS-OMP2 CORRELATION ENERGY`

   * :psivar:`SCS-OMP2 TOTAL ENERGY`

   * :psivar:`SCS-OMP3 CORRELATION ENERGY`

   * :psivar:`SCS-OMP3 TOTAL ENERGY`

   * :psivar:`SOS-MP2 CORRELATION ENERGY`

   * :psivar:`SOS-MP2 TOTAL ENERGY`

   * :psivar:`SOS-OMP2 CORRELATION ENERGY`

   * :psivar:`SOS-OMP2 TOTAL ENERGY`

   * :psivar:`SOS-OMP3 CORRELATION ENERGY`

   * :psivar:`SOS-OMP3 TOTAL ENERGY`

   * :psivar:`SOS-PI-MP2 CORRELATION ENERGY`

   * :psivar:`SOS-PI-MP2 TOTAL ENERGY`


